add select, radio ...

--- a/registration-form.html
+++ b/registration-form.html
@@ -33,7 +33,25 @@
       </tr>
       <tr>
         <td>Gender: </td>
-        <td><input type="date" name="r-date" required /></td>
+        <td>
+          <input type="radio" name="gender" value="Male" required /> Male<br>
+          <input type="radio" name="gender" value="Female" required />Female<br>
+        </td>
+      </tr>
+      <tr>
+        <td>State: </td>
+      <td>
+        <select>
+          <option value="Virginia">Virginia</option>
+          <option value="Maryland">Maryland</option>
+          <option value="Florida">Florida</option>
+        </select>
+      </td>
+      </tr>
+        
+      <tr>
+        <td></td>
+        <td><input type="submit" name="r-reg" required /></td>
       </tr>
     </table>
   </form>
