--- a/registration-form.html
+++ b/registration-form.html
@@ -55,6 +55,12 @@
       </tr>
     </table>
   </form>
+
+  <h2>This image is already on sale</h2>
+  <img src="images/laptop.jpg" width="300px" height="200px" />
+  <p><del> USD 750 -></del> <ins> USD 520 </ins></p>
+  <a href="#">Buy now</a>
+  <button>Buy Now</button>
 </body>
 
 </html>
