--- a/practice/basic template/index.html
+++ b/practice/basic template/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css"  />
+  <link rel="stylesheet" href="style.css" />
   <title>Template</title>
 </head>
 
@@ -14,27 +14,40 @@
     <div class="logo">
       <a href="home">(O)(O)</a>
       <input type="text" placeholder="Find...">
-      <input type="submit" value="">
+      <input type="submit" value=">">
     </div>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
         <li class="dropdown">
-          <a href="#">Career</a>
+          <a href="#">Services</a>
           <ul class="dropdown-menu">
-            <li><a href="#">Intern</a></li>
-            <li><a href="#">Junior</a></li>
-            <li><a href="#">Senior</a></li>
+            <li><a href="#">Banking</a></li>
+            <li><a href="#">Insurance</a></li>
+            <li><a href="#">Teaching </a></li>
+            <li><a href="#">Childcare</a></li>
+            <li><a href="#">Architecture</a></li>
+            <li><a href="#">Training</a></li>
           </ul>
         </li>
-        <li><a href="#">Map</a></li>
+        <li class="dropdown">
+          <a href="#">Products</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Magazines</a></li>
+            <li><a href="#">Toothpaste</a></li>
+            <li><a href="#">Food</a></li>
+            <li><a href="#">Shampoo</a></li>
+            <li><a href="#">Candy</a></li>
+            <li><a href="#">Laundry </a></li>
+          </ul>
+        </li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  
+
 
 </body>
 
