--- a/practice/basic template/index.html
+++ b/practice/basic template/index.html
@@ -54,8 +54,7 @@
       <img src="../../images/laptop.jpg" />
       <img src="../../images/hilton-arlington.jpg" />
       <div class="center">
-        <a href="#" id="prev">Prev</a>
-        <a href="#" id="next">Next</a>
+
       </div>
     </section>
 
@@ -75,25 +74,31 @@
       });
     </script>
 
+    <section class="content-holder">
 
+      <article class="content">
+        <main>
+          <h1>Lorem ipsum dolor sit amet.</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error excepturi fuga laboriosam, quis quo
+            sint blanditiis officia veritatis! Ducimus alias, hic facere rem cumque, laborum ipsam, ipsa labore soluta
+            veritatis voluptatum nesciunt tenetur beatae numquam nostrum asperiores impedit delectus aperiam natus
+            tempora
+            atque ea voluptates! Nulla magni sint ipsa blanditiis, nostrum id, provident a modi ducimus iusto
+            repellendus!
+            Repellendus fuga beatae illum recusandae, doloribus pariatur? Animi molestiae voluptatibus harum veniam
+            reprehenderit perferendis ut facere reiciendis, eius, mollitia ullam deserunt porro veritatis molestias
+            eligendi rerum exercitationem id autem saepe quae esse magnam recusandae distinctio? Minus dolor
+            perspiciatis
+            rem delectus molestiae itaque officia placeat culpa et ipsa voluptates consequuntur, animi id quam qui fuga,
+            accusamus voluptas neque eum veniam eligendi unde. Saepe cupiditate eum possimus quis minus earum doloribus
+            ex
+            distinctio necessitatibus. Culpa adipisci, architecto voluptates reiciendis excepturi, minima a, harum odio
+            consequatur dolores autem! Earum minima, officia ipsa voluptatum cupiditate obcaecati sequi? Quod cum unde
+            deserunt officiis, numquam est!</p>
+        </main>
+      </article>
+    </section>
 
-    <article>
-      <main>
-        <h1>Lorem ipsum dolor sit amet.</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error excepturi fuga laboriosam, quis quo
-          sint blanditiis officia veritatis! Ducimus alias, hic facere rem cumque, laborum ipsam, ipsa labore soluta
-          veritatis voluptatum nesciunt tenetur beatae numquam nostrum asperiores impedit delectus aperiam natus tempora
-          atque ea voluptates! Nulla magni sint ipsa blanditiis, nostrum id, provident a modi ducimus iusto repellendus!
-          Repellendus fuga beatae illum recusandae, doloribus pariatur? Animi molestiae voluptatibus harum veniam
-          reprehenderit perferendis ut facere reiciendis, eius, mollitia ullam deserunt porro veritatis molestias
-          eligendi rerum exercitationem id autem saepe quae esse magnam recusandae distinctio? Minus dolor perspiciatis
-          rem delectus molestiae itaque officia placeat culpa et ipsa voluptates consequuntur, animi id quam qui fuga,
-          accusamus voluptas neque eum veniam eligendi unde. Saepe cupiditate eum possimus quis minus earum doloribus ex
-          distinctio necessitatibus. Culpa adipisci, architecto voluptates reiciendis excepturi, minima a, harum odio
-          consequatur dolores autem! Earum minima, officia ipsa voluptatum cupiditate obcaecati sequi? Quod cum unde
-          deserunt officiis, numquam est!</p>
-      </main>
-    </article>
 </body>
 
 </html>
