--- a/amazonHeader/index.html
+++ b/amazonHeader/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Amazon Header</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <div class="header__top">
@@ -51,5 +53,9 @@
       </ul>
     </div>
   </header>
+
+  <script src="script.js">
+  </script>
 </body>
+
 </html>
