--- a/practice/basic template/index.html
+++ b/practice/basic template/index.html
@@ -99,6 +99,21 @@
       </article>
     </section>
 
+
+    <footer>
+      <div class="footer-content">
+        <p>© 2023 My Test Website. All Rights Reserved.</p>
+        <ul>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">FAQ</a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
+</html>
+
+
 </body>
 
 </html>
