--- a/practice/basic template/index.html
+++ b/practice/basic template/index.html
@@ -74,11 +74,10 @@
       });
     </script>
 
-    <section class="content-holder">
-
-      <article class="content">
+    <section  class="content-holder">
+      <article id="content" class="content">
         <main>
-          <h1>Lorem ipsum dolor sit amet.</h1>
+          <h1 id="heading">Lorem ipsum dolor sit amet.</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error excepturi fuga laboriosam, quis quo
             sint blanditiis officia veritatis! Ducimus alias, hic facere rem cumque, laborum ipsam, ipsa labore soluta
             veritatis voluptatum nesciunt tenetur beatae numquam nostrum asperiores impedit delectus aperiam natus
@@ -113,7 +112,7 @@
   </body>
 </html>
 
-
+<script src="index.js"></script>
 </body>
 
 </html>
