add and delete content

--- a/practice/basic template/index.html
+++ b/practice/basic template/index.html
@@ -95,6 +95,12 @@
             consequatur dolores autem! Earum minima, officia ipsa voluptatum cupiditate obcaecati sequi? Quod cum unde
             deserunt officiis, numquam est!</p>
         </main>
+        <button id="myBtnA">ADD title</button>
+        <button id="myBtnTA">ADD text</button>
+        <br>
+        <button id="myBtn">Delete title</button>
+        <button id="myBtnT">Delete text</button>
+
       </article>
     </section>
 
